CB-18358: Improve ParcelUrlProvider logic to return only the required urls
The ParcelUrlProvider is returning all the required parcel URLs for a cluster. After implementing the upgrade-preparation flow, this logic is used multiple times. Therefore it can happen that the required parcels are already downloaded or distributed. In this case, we don't need to return those parcel URLs.